force-app/main/default/objects/Opportunity/fields/AFP_Perent__c.field-meta.xml
<CustomField>
    <fullName>AFP_Perent__c</fullName>
    <label>AFP %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>