force-app/main/default/objects/Opportunity/fields/Amount_with_VAT__c.field-meta.xml
<CustomField>
    <fullName>Amount_with_VAT__c</fullName>
    <formula>Amount +  Runner_VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount with VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>