force-app/main/default/objects/Opportunity/fields/As_per_the_Drawings__c.field-meta.xml
<CustomField>
    <fullName>As_per_the_Drawings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>As per the Drawings</label>
    <type>Checkbox</type>
</CustomField>