force-app/main/default/objects/Opportunity/fields/Bank_A_C__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_C__c</fullName>
    <defaultValue>&quot; 0001 1008 3351&quot;</defaultValue>
    <label>Bank A/C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>