force-app/main/default/objects/Opportunity/fields/Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details__c</fullName>
    <defaultValue>&quot; Sampath Bank&quot;</defaultValue>
    <label>Bank Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>