force-app/main/default/objects/Opportunity/fields/Benificiary_Details__c.field-meta.xml
<CustomField>
    <fullName>Benificiary_Details__c</fullName>
    <defaultValue>&quot;Orel Corporation Pvt Ltd.&quot;</defaultValue>
    <label>Benificiary Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>