force-app/main/default/objects/Opportunity/fields/Brackets__c.field-meta.xml
<CustomField>
    <fullName>Brackets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brackets</label>
    <type>Checkbox</type>
</CustomField>