force-app/main/default/objects/Opportunity/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAL 7032 Beige Gloss Finish</fullName>
            </value>
            <value>
                <fullName>RAL 7032 Beige Textured Finish</fullName>
            </value>
            <value>
                <fullName>RAL 7035 Gray textured Finish</fullName>
            </value>
            <value>
                <fullName>RAL 9003 White Gloss Finish</fullName>
            </value>
            <value>
                <fullName>RAL 2004 Orange Gloss Finish RAL 9005 Black Textured Finish</fullName>
            </value>
            <value>
                <fullName>RAL 9005 Black Gloss Finish</fullName>
            </value>
            <value>
                <fullName>RAL 9005 Black Sand Finish</fullName>
            </value>
            <value>
                <fullName>RAL 3020 Post Office Red Textured Finish</fullName>
            </value>
            <value>
                <fullName>RAL 3020 Post Office Red Gloss Finish</fullName>
            </value>
            <value>
                <fullName>With Out Powder Coated</fullName>
            </value>
            <value>
                <fullName>RAL 7032 Beige Textured Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 7032 Beige Gloss Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 7035 Gray textured Finish With Primer Coating RAL 9003 White Gloss Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 2004 Orange Gloss Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 9005 Black Textured Finish With Primer Coating RAL 9005 Black Gloss Finish Fi With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 9005 Black Sand Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 3020 Post Office Red Textured Finish With Primer Coating RAL 3020 Post Office fled Gloss Finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>Hot Dipped Galvanized</fullName>
            </value>
            <value>
                <fullName>Powder Coated RAL 3020 (Red) Powder Coated RAL 7032 (Beige)</fullName>
            </value>
            <value>
                <fullName>Powder Coated RAL 7035 (Gray) Powder Couted RAL 9003 (White) Powder Coated RAL 9005 (Black)</fullName>
            </value>
            <value>
                <fullName>Hot Dipped G</fullName>
            </value>
            <value>
                <fullName>Orange Color White Powder coatied</fullName>
            </value>
            <value>
                <fullName>Powder Coated RAL 9016 (Traffic White) Black Mat</fullName>
            </value>
            <value>
                <fullName>RAL 7035 Gray Gless finish With Primer Coating</fullName>
            </value>
            <value>
                <fullName>RAL 7036 Gray textured Finish</fullName>
            </value>
            <value>
                <fullName>RAL 7035 GRAY GLOSS FINISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>