force-app/main/default/objects/Opportunity/fields/Colour_Type__c.field-meta.xml
<CustomField>
    <fullName>Colour_Type__c</fullName>
    <label>Colour Type</label>
    <length>90</length>
    <type>Text</type>
</CustomField>