force-app/main/default/objects/Opportunity/fields/Customer_Drawing_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Drawing_Response__c</fullName>
    <label>Customer Drawing Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>