force-app/main/default/objects/Opportunity/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <defaultValue>&quot;7 Days After Confirmation&quot;</defaultValue>
    <label>Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>