force-app/main/default/objects/Opportunity/fields/End_Caps_QTY__c.field-meta.xml
<CustomField>
    <fullName>End_Caps_QTY__c</fullName>
    <label>End Caps QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>