force-app/main/default/objects/Opportunity/fields/Fixed_Joint_Pieces_QTY__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Joint_Pieces_QTY__c</fullName>
    <label>Fixed Joint Pieces QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>