force-app/main/default/objects/Opportunity/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General</label>
    <length>90</length>
    <type>Text</type>
</CustomField>