force-app/main/default/objects/Opportunity/fields/Gloss__c.field-meta.xml
<CustomField>
    <fullName>Gloss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gloss</label>
    <type>Checkbox</type>
</CustomField>