force-app/main/default/objects/Opportunity/fields/Inquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Number__c</fullName>
    <label>Inquiry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>