force-app/main/default/objects/Opportunity/fields/IP_Rating__c.field-meta.xml
<CustomField>
    <fullName>IP_Rating__c</fullName>
    <label>IP Rating:</label>
    <length>80</length>
    <type>Text</type>
</CustomField>