force-app/main/default/objects/Opportunity/fields/Joint_Pieces_QTY_Out_Side_Fixing__c.field-meta.xml
<CustomField>
    <fullName>Joint_Pieces_QTY_Out_Side_Fixing__c</fullName>
    <label>Joint Pieces QTY (Out Side Fixing)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>