force-app/main/default/objects/Opportunity/fields/Lids_QTY__c.field-meta.xml
<CustomField>
    <fullName>Lids_QTY__c</fullName>
    <label>Lids QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>