force-app/main/default/objects/Opportunity/fields/Matt__c.field-meta.xml
<CustomField>
    <fullName>Matt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matt</label>
    <type>Checkbox</type>
</CustomField>