force-app/main/default/objects/Opportunity/fields/Mounting_Plates__c.field-meta.xml
<CustomField>
    <fullName>Mounting_Plates__c</fullName>
    <label>Mounting Plates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>