force-app/main/default/objects/Opportunity/fields/Orl_Commissioning_Cost__c.field-meta.xml
<CustomField>
    <fullName>Orl_Commissioning_Cost__c</fullName>
    <label>Commissioning Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>