force-app/main/default/objects/Opportunity/fields/Orl_Labour_Cost__c.field-meta.xml
<CustomField>
    <fullName>Orl_Labour_Cost__c</fullName>
    <label>Labour Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>