force-app/main/default/objects/Opportunity/fields/Orl_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Orl_Opportunity_Number__c</fullName>
    <displayFormat>PO-{0000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>