force-app/main/default/objects/Opportunity/fields/Orl_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>Orl_Transport_Cost__c</fullName>
    <label>Transport Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>