force-app/main/default/objects/Opportunity/fields/Panel_type__c.field-meta.xml
<CustomField>
    <fullName>Panel_type__c</fullName>
    <label>Panel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wired</fullName>
            </value>
            <value>
                <fullName>Non Wired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>