force-app/main/default/objects/Opportunity/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>&quot;A/C Cheque&quot;</defaultValue>
    <label>Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>