force-app/main/default/objects/Opportunity/fields/Payment_Terms_R__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_R__c</fullName>
    <label>Payment Terms R.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>