force-app/main/default/objects/Opportunity/fields/price_list__c.field-meta.xml
<CustomField>
    <fullName>price_list__c</fullName>
    <defaultValue>&quot;All inclusive&quot;</defaultValue>
    <label>price list</label>
    <length>255</length>
    <type>Text</type>
</CustomField>