force-app/main/default/objects/Opportunity/fields/Price_Validity__c.field-meta.xml
<CustomField>
    <fullName>Price_Validity__c</fullName>
    <defaultValue>&quot;7 Days&quot;</defaultValue>
    <label>Price Validity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>