force-app/main/default/objects/Opportunity/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP 54</fullName>
                <default>true</default>
                <label>IP 54</label>
            </value>
            <value>
                <fullName>IP 42</fullName>
            </value>
            <value>
                <fullName>IP 44</fullName>
            </value>
            <value>
                <fullName>IP 65</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>