force-app/main/default/objects/Opportunity/fields/Rep_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Rep_Delivery__c</fullName>
    <label>Rep. Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ex-Stock Prior to Sale</fullName>
            </value>
            <value>
                <fullName>(Ex-Works)4-5 weeks from sale</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 5 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 7 working Days after drawings confirmation (Ex-works) 10 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 1-2 weeks after drawings confirmation (Ex-works) 2-3 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 6-8 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 2-4 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 8-12 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-Works) 2-3 weeks after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-Works) 2-3 Working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>14 Working Days after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 4-6 Months after drawings confirmation</fullName>
            </value>
            <value>
                <fullName>(Ex-works) 3-4 Months after drawings confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>