force-app/main/default/objects/Opportunity/fields/Runner_VAT_Amount__c.field-meta.xml
<CustomField>
    <fullName>Runner_VAT_Amount__c</fullName>
    <formula>Amount *  VAT_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Runner VAT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>