force-app/main/default/objects/Opportunity/fields/Runner_Warrenty__c.field-meta.xml
<CustomField>
    <fullName>Runner_Warrenty__c</fullName>
    <defaultValue>&quot;For ORANGE ELECTRIC Products, Lifetime-Warranty for all Switches and Sockets, Low Voltage Switchgear 10kA &amp; SIGMA Ranges.&quot; + BR() +
 &quot;5-Years Warranty for all Fan Controllers, Shaver-Outlet, Low Voltage Switchgear Alpha.&quot; + BR() +
 &quot;24-Months Warranty for LED Lamps and Industrial Products. 12 to 18-Months Warranty for all CFLs. 12 Months Warranty for Home Appliances.&quot; + BR() +
 &quot;The above Warranties would be applicable from Date of Invoice.&quot;</defaultValue>
    <label>Runner Warrenty</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>