force-app/main/default/objects/Opportunity/fields/Slotted_only_QTY__c.field-meta.xml
<CustomField>
    <fullName>Slotted_only_QTY__c</fullName>
    <label>Slotted only QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>