force-app/main/default/objects/Opportunity/fields/Task_Close__c.field-meta.xml
<CustomField>
    <fullName>Task_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Close</label>
    <type>Checkbox</type>
</CustomField>