force-app/main/default/objects/Opportunity/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>SVAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>