force-app/main/default/objects/Opportunity/fields/Texture__c.field-meta.xml
<CustomField>
    <fullName>Texture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Texture</label>
    <type>Checkbox</type>
</CustomField>