force-app/main/default/objects/Opportunity/fields/Total_With_Qty_VAT_INC__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Qty_VAT_INC__c</fullName>
    <formula>Total_With_Quantity__c +  VAT_in_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total With Qty &amp; VAT (INC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>