force-app/main/default/objects/Opportunity/fields/Total_With_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_With_Quantity__c</fullName>
    <label>Total With Quantity</label>
    <summarizedField>OpportunityLineItem.Final_Bundle_Price_with_Quantity__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>