force-app/main/default/objects/Opportunity/fields/Total_with_VAT_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_with_VAT_Quantity__c</fullName>
    <label>Total with VAT &amp; Quantity</label>
    <summarizedField>OpportunityLineItem.Final_Bundle_price_with_VAT_Quantity__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>